# fitness-agnent

./: .env  .env.example  README.md  pyproject.toml  pyrightconfig.json
sql/: schema.sql
src/fitness_agent/: __init__.py  config.py  main.py
src/fitness_agent/api/: __init__.py  routes.py
src/fitness_agent/graph/: __init__.py  graph.py  state.py
src/fitness_agent/graph/nodes/: course_recommendation.py  diet_exercise_recorder.py  intent_classifier.py  qa_node.py  query_rewriter.py  reminder_node.py  workout_plan_generator.py
src/fitness_agent/memory/: __init__.py  pg_checkpointer.py  redis_short_term.py
src/fitness_agent/models/: __init__.py  database.py  schemas.py
src/fitness_agent/rag/: embedder.py  reranker.py  retriever.py
src/fitness_agent/services/: __init__.py  app_api.py  session_summarizer.py
tests/: test_graph.py
